# deep-polynomial-chaos-expansion

./: README.md  pyproject.toml  run_experiment.py
src/: config.py
src/baselines/: cnn.py  mlp.py  pce.py
src/datasets/: pde.py  test_functions.py  xdbenchmark_var_cond_exp_MC_100.npy  xdbenchmark_variance_MC_100.npy
src/inference_evaluation/: __init__.py  inference_evaluation.py  mc.py
